# usai-harness

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  pyproject.toml  seldon.yaml  seldon_events.jsonl
.github/workflows/: ci.yml
configs/: models.yaml
docs/: README.md  api-reference.md  architecture.md  nfr.md  ops-guide.md  rtm.md  srs.md  tevv-plan.md
docs/adr/: ADR-001-pluggable-transport-layer.md  ADR-002-reactive-authentication.md  ADR-003-pluggable-credential-backend.md  ADR-004-cost-ledger-and-logging.md  ADR-005-minimal-dependency-surface.md  ADR-006-rate-limiting.md  ADR-007-security-by-default.md  ADR-008-user-level-credential-storage.md  ADR-009-setup-and-model-discovery.md  ADR-011-project-config-file-convention.md  ADR-012-model-pool-schema.md  ADR-013-project-bootstrap-tevv.md  ADR-014-family-catalog-and-parameter-validation.md  ADR-015-project-config-schema-as-artifact.md  (+3 more)
tests/: conftest.py  test_audit.py  test_auth_recovery.py  test_catalog_merge_reconciliation.py  test_cli.py  test_client.py  test_config.py  test_cost.py  test_cost_tracker_per_model.py  test_families_command.py  test_family_catalog.py  test_key_manager.py  test_list_models.py  test_logger.py  test_progress.py  test_project_config_schema.py  test_project_init.py  test_project_init_pool.py  test_rate_limiter.py  test_redaction.py  test_repo_hygiene.py  test_report.py  test_setup_commands.py  test_transport.py  test_validate_config_command.py  test_worker_pool.py
usai_harness/: __init__.py  audit_command.py  auth_recovery.py  cli.py  client.py  config.py  cost.py  key_manager.py  logger.py  progress.py  rate_limiter.py  redaction.py  report.py  setup_commands.py  transport.py  worker_pool.py
(+12 files in other folders)
