[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usai-harness"
version = "0.1.0"
description = "Rate-limited, model-agnostic LLM client library for USAi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Brock Webb"}
]
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.50"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
usai-harness = "usai_harness.report:cli_main"

[tool.setuptools.packages.find]
include = ["usai_harness*"]
