[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usai-harness"
version = "0.2.0"
description = "Rate-limited, model-agnostic LLM client library for USAi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Brock Webb"}
]
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.50"]
azure = [
    "azure-identity>=1.15",
    "azure-keyvault-secrets>=4.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
usai-harness = "usai_harness.cli:cli_main"

[tool.setuptools.packages.find]
include = ["usai_harness*"]

[tool.setuptools.package-data]
"usai_harness.templates" = ["*.template", "*.txt"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a live USAi endpoint (deselect with '-m \"not integration\"')",
]
